Wed Apr 21 20:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSAttributedString.m: Tidied.
	* Source/Source/NSAutoreleasePool.m: Thread exit code added
	* Source/NSCalendarDate.m: Tidied
	* Source/NSConnection.m: ditto
	* Source/NSException.m: Tidied and added description
	* Source/NSRunLoop.m: Optimisation, bugfixes, and removal of cruft.
	* Source/NSThread.m: Clean up autorelease pools on exit.
	* Source/NSTimer.m: Optimise use in runloop.
	* Source/include/FastArray.x: Bugfix for sorted array.
	* Source/include/NSAutoreleasePool.h: Mod for threads.
	* Source/include/NSObject.h: More retain/release macros.
	* Source/include/NSRunLoop.h: Optimise limit date.
	* Source/include/NSTimer.h: Optimise use with run loop.

Tue Apr 20 16:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/Makefile.postamble: NSRunLoop.m uses FastArray.x
	* Source/NSConnection.m: Tiny performance optimisation.
	* Source/NSDate.m: Minor fixes to class cluster.
	* Source/NSGDictionary.m: fixed typo.
	* Source/NSNotificationQueue.m: Optimised runloop interaction.
	* Source/NSRunLoop.m: Optimisaed notification queue interaction.
	* Source/NSTimer.m: Optimisation for run loop.
	* Source/NSUnarchiver.m: Fixed typo.
	* Source/include/FastArray.x: Support sorted insertion.
	* Source/include/NSDate.h: Tidied.
	* Source/include/NSNotificationQueue.h: Change runloop interface.
	* Source/include/NSTimer.h: Change runloop interface.

Mon Apr 19 14:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSThread.m: Fast thread access (GSCurrentThread()) etc.
	* Source/NSAssertionHandler.m: Use fast thread access.
	* Source/NSConnection.m: Use fast thread access.
	* Source/NSException.m: Use fast thread access.
	* Source/NSNotificationQueue.m: Use fast thread access.
	* Source/NSRunLoop.m: Use fast thread access plus other optimisations.
	* Source/NSAutoreleasePool.m: Speed up thread access.