@@ -42,7 +42,6 @@ extern id NSDefaultRunLoopMode;
   NSMutableArray *_timedPerformers;
   NSMapTable	*_rfdMap;
   NSMapTable	*_wfdMap;
-  NSDate	*_limit;
 }
 
 + (NSRunLoop*) currentRunLoop;
